# ai-desktop

./: .gitignore  AppScope 产品与技术说明文档.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  tmp-classify-latest.ts  vite.config.ts
.ai-docs/: _codebase_analysis.json  _dev_patterns.json
.cargo/: config.toml
.design-import/: AppScope.dc.html
docs/: COMMANDS.md  STANDARDS.md
docs/supabase/: intercepts-cleanup.sql  intercepts-list-optimization.sql  intercepts-performance.sql  intercepts-schema.sql
docs/theme/: liquid-glass-tauri-guide.md
src/: App.tsx  api.conversationFetch.test.ts  api.ts  api.uploadIntercepts.test.ts  chatApi.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  cert.rs  chat_commands.rs  chrome.rs  commands.rs  default_page.rs  export.rs  lib.rs  main.rs  models.rs  page_webview.rs  paths.rs  proxy.rs  store.rs
src-tauri/src/chat_providers/: api.rs  codex.rs  mod.rs  title.rs
src/components/: AppChatSettings.test.ts  AppChatSettings.tsx  AppChatWorkspace.test.ts  AppChatWorkspace.tsx  AppDetail.tsx  CertManager.tsx  CodexTaskConfirmationModal.test.ts  CodexTaskConfirmationModal.tsx  ContentCard.tsx  ConversationMarkdown.tsx  EmptyState.tsx  FlowDetail.tsx  FlowTable.tsx  InterceptPanel.tsx  PageBrowser.tsx  ReportedSessionPanel.tsx  ResizeHandle.tsx  SessionRecordsView.tsx  SessionsWorkspace.tsx  Settings.layout.test.ts  Settings.tsx  SidePane.tsx  Sidebar.appchat.test.ts  (+7 more)
(+73 files in other folders)
